test/typechecker.d/invalid/sub3.souc.bad
subr(b: Bool): IO = do
	n <- 2
	return n

main(): IO = do
	subr 4
